--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 ## Database Properties
-spring.datasource.url = jdbc:mysql://localhost:3306/users_database?useSSL=false
-spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.url = jdbc:mysql://localhost:3306/test?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username = zhao
+spring.datasource.password = zhao
 
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
